# sdr2

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cc
src/core/: CMakeLists.txt  device  device-airspy.c  device-sdrplay.c  device.c  template.cc
src/core/inc/: template.h
src/core/include/: device.h
